--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -41,4 +41,8 @@
     --setting-button-hover: rgb(50,65,82);
     --icon-disabled: #606060;
     --icon-error-red: #ff4e45;
+
+    --container-border: #606060;
+
+    --general-bg: #1f1f1f;
 }
