--- a/src/components/Upload/UploadSetting.scss
+++ b/src/components/Upload/UploadSetting.scss
@@ -1,12 +1,10 @@
 .upload_setting {
-    width: 920px;
-    // height: 840px;
-    height: 100%;
+    width: 960px;
+    height: 840px;
     margin-top: 40px;
     background: #282828;
     display: flex;
     flex-direction: column;
-    // overflow: hidden;
 }
 
 .upload_setting_title {
@@ -178,6 +176,11 @@
         top: 50%;
         pointer-events: none;
     }
+}
+
+.upload_setting_content {
+    max-height: 100%;
+    overflow-y: overlay;
 }
 
 .upload_setting_content_header {
@@ -870,4 +873,99 @@
     padding-bottom: 5px;
     margin-left: 16px;
     margin-right: 16px;
+}
+
+.upload_setting_footer {
+    padding: 8px 8px 8px 16px;
+    height: 53px;
+    display: flex;
+    flex-shrink: 0;
+    align-items: center;
+    border-top: 1px solid var(--white-alpha-10);
+}
+
+.upload_setting_footer_inner {
+    display: flex;
+    flex: 1;
+}
+
+.upload_setting_footer_left {
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+}
+
+.upload_setting_footer_left_inner {
+    flex-grow: 1;
+    display: flex;
+    margin-right: 16px;
+    height: 24px;
+
+    span {
+        color: var(--text-secondary);
+        font-size: 13px;
+        line-height: 20px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        margin-top: 2px;
+        margin-right: 6px;
+        margin-left: 16px;
+    }
+}
+
+.upload_setting_footer_icon {
+    width: 24px;
+    height: 24px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    vertical-align: middle;
+    margin-left: 8px;
+
+    &:first-of-type {
+        margin-right: 0;
+    }
+}
+
+.upload_setting_footer_right {
+    display: flex;
+    align-items: center;
+}
+
+.upload_setting_footer_next_button {
+    margin-left: 8px;
+    color: var(--bg-primary-inverse);
+    background-color: var(--text-sub-blue);
+    padding-left: 16px;
+    padding-right: 16px;
+    border-radius: 4px;
+    display: inline-flex;
+    align-items: center;
+    text-align: center;
+    cursor: pointer;
+    min-width: 36px;
+    height: 36px;
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.upload_setting_footer_button_label {
+    padding: 8px 0;
+}
+
+.upload_setting_footer_prev_button {
+    display: inline-flex;
+    align-items: center;
+    text-align: center;
+    cursor: pointer;
+    min-width: 36px;
+    height: 36px;
+    padding: 0 8px;
+    margin: 0;
+    position: relative;
+    color: var(--text-secondary);
+    font-size: 14px;
+    line-height: 20px;
 }
