--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -4,6 +4,7 @@
     --category-bt-bg: rgba(255, 255, 255, 0.1);
     --studio-bg: #282828;
     --bg-primary: #f1f1f1;
+    --bg-primary-inverse: #0d0d0d;
     --bg-black: #0f0f0f;
     --bg-gray: #aaa;
     --bg-sub-blue: #3ea6ff;
@@ -38,11 +39,22 @@
 
     --player-control-time-text: #ddd;
 
-    --setting-button-hover: rgb(50,65,82);
+    --setting-button-hover: rgb(50, 65, 82);
     --icon-disabled: #606060;
     --icon-error-red: #ff4e45;
 
     --container-border: #606060;
 
     --general-bg: #1f1f1f;
+
+    --wt-overlay-background-inverse: rgba(40, 40, 40, 0.6);
+    --wt-general-background-a: #1f1f1f;
+
+    --icon-standard-length: 24px;
+    --icon-color: #aaa;
+
+    --wt-text-disabled: #717171;
+    --wt-line-divider: rgba(255,255,255,0.1);
+
+    --wt-theme-green: #2ba640;
 }
