--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -51,10 +51,20 @@
     --wt-general-background-a: #1f1f1f;
 
     --icon-standard-length: 24px;
+    --icon-compact-length: 20px;
     --icon-color: #aaa;
 
     --wt-text-disabled: #717171;
-    --wt-line-divider: rgba(255,255,255,0.1);
+    --wt-line-divider: rgba(255, 255, 255, 0.1);
 
     --wt-theme-green: #2ba640;
+
+    --wt-container-border: 1px solid var(--container-border);
+
+    --wt-standard-border-radius: 4px;
+    --radio-button-size: 20px;
+    --wt-icon-inactive: #717171;
+
+    --wt-video-metadata-info-player-width: 304px;
+    --wt-video-metadata-info-player-height: 171px;
 }
