--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -51,6 +51,7 @@
     --wt-general-background-a: #1f1f1f;
 
     --icon-standard-length: 24px;
+    --icon-standard-padding: 8px;
     --icon-compact-length: 20px;
     --icon-color: #aaa;
 
