[Feat]: Upload Component 수정중, Studio Content 추가
 - Upload.jsx: upload_setting routing 변경
 - Upload2.jsx: upload class명 및 custom tag 변경중
 - StudioContent.jsx, scss: studio content layout 추가
 - StudioPage.jsx: studio content 추가
 - App.js: upload test routing 변경
 - App.css: overlay backdrop 추가
 - common.scss: root css 추가

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -63,9 +63,15 @@
     --wt-container-border: 1px solid var(--container-border);
 
     --wt-standard-border-radius: 4px;
+    --wt-extended-border-radius: 6px;
     --radio-button-size: 20px;
     --wt-icon-inactive: #717171;
 
     --wt-video-metadata-info-player-width: 304px;
     --wt-video-metadata-info-player-height: 171px;
+
+    --wt-vertical-bumper-size: 48px;
+
+    --dialog-background-color: var(--studio-bg);
+    --dialog-color: var(var(--text-primary));
 }
