--- a/src/App.css
+++ b/src/App.css
@@ -89,3 +89,14 @@ button.remove-default-style {
   margin: 0;
   padding: 0;
 }
+
+wt-iron-overlay-backdrop{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  opacity: 0.2;
+  z-index: 2002;
+}
