--- a/src/components/Upload/Upload.scss
+++ b/src/components/Upload/Upload.scss
@@ -1,10 +1,15 @@
 .upload {
+    // margin-left: 100px;
     width: 960px;
     height: 840px;
     margin-top: 40px;
     background: #212121;
     display: flex;
     flex-direction: column;
+    z-index: 3000;
+    position: fixed;
+    left: 50px;
+    top: 24px;
 
     &_title {
         height: 64px;
