--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 a {
   text-decoration: none;
-  color: inherit;
+  color: var(--text-sub-blue);
 }
 
 li {
@@ -23,13 +23,6 @@ li {
   border: 4px solid transparent;
   background-clip: content-box;
   background-color: #717171;
-}
-
-wt-iron-icon,
-iron-icon {
-  --iron-icon-width: var(--icon-standard-length);
-  --iron-icon-height: var(--icon-standard-length);
-  color: var(--icon-color);
 }
 
 wt-iron-icon {
@@ -49,10 +42,29 @@ wt-iron-icon {
   padding: var(--iron-icon-padding);
 }
 
+wt-iron-icon,
+iron-icon {
+  --iron-icon-width: var(--icon-standard-length);
+  --iron-icon-height: var(--icon-standard-length);
+  color: var(--icon-color);
+}
+
+
+
 wt-button[disabled] {
   background: transparent;
   color: var(--wt-text-disabled);
   cursor: default;
+}
+
+wt-button[type=filled] {
+  color: var(--text-primary-inverse);
+  background-color: var(--wt-theme-blue-bg);
+}
+
+wt-button[type=filled] {
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 wt-button {
@@ -80,6 +92,11 @@ wt-button {
   line-height: 20px;
 }
 
+/* 
+wt-button.label.wt-button{
+  cursor: pointer;
+} */
+
 button.remove-default-style {
   background: none;
   border: none;
@@ -90,7 +107,7 @@ button.remove-default-style {
   padding: 0;
 }
 
-wt-iron-overlay-backdrop{
+wt-iron-overlay-backdrop {
   position: fixed;
   top: 0;
   left: 0;
@@ -99,4 +116,78 @@ wt-iron-overlay-backdrop{
   background: #000;
   opacity: 0.2;
   z-index: 2002;
+}
+
+wt-icon-button {
+  display: inline-flex;
+  cursor: pointer;
+  position: relative;
+}
+
+
+wt-icon-button {
+  width: var(--icon-standard-length);
+  width: 40px;
+  height: var(--icon-standard-length);
+  height: 40px;
+  padding: var(--icon-standard-padding);
+}
+
+wt-iron-icon.wt-icon-button {
+  color: inherit;
+  width: 100%;
+  height: 100%;
+}
+
+wt-upload-file-picker-animation.wt-upload-file-picker {
+  margin-top: auto;
+  cursor: pointer;
+}
+
+wt-upload-file-picker-animation {
+  display: block;
+}
+
+wt-upload-file-picker.wt-upload-dialog {
+  margin-bottom: 24px;
+}
+
+wt-upload-file-picker {
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  color: var(--text-primary);
+  --wt-feature-discovery-zindex: 3000;
+}
+
+wt-upload-dialog {
+  display: flex;
+  flex-direction: column;
+  --paper-dialog-scrollable-padding: 0;
+  --header-title-row-height: 64px;
+  --button-row-height: 52px;
+  --metadata-editor-left-col-min-width: 536px;
+  --ytcp-feature-discovery-zindex: 3000;
+}
+
+wt-dialog.wt-upload-dialog {
+  border-radius: var(--wt-extended-border-radius);
+  height: calc(100% - var(--wt-vertical-bumper-size) * 2);
+  min-height: 492px;
+  width: 960px;
+  min-width: 960px;
+  overflow-x: hidden;
+}
+
+wt-dialog {
+  display: block;
+  margin: 24px 40px;
+  background: var(--dialog-background-color);
+  color: var(--dialog-color);
+  font-family: "Roboto", "Noto", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
 }
