--- a/src/components/Upload/UploadElement.scss
+++ b/src/components/Upload/UploadElement.scss
@@ -77,7 +77,8 @@ h3.wt-upload-video-element {
     text-overflow: ellipsis;
     display: block;
     flex: 1 1;
-    padding: 0 8px;
+    padding: 8px 0;
+    cursor: pointer;
 }
 
 #import-from-video-button.wt-upload-video-element {
