[Style]: upload css 수정
 - App.css: anchor tag color 수정
 - Upload.scss: anchor tag color 수정

--- a/src/components/Upload/Upload.scss
+++ b/src/components/Upload/Upload.scss
@@ -113,6 +113,10 @@
     &:last-of-type {
         margin-bottom: 4px;
     }
+
+    a{
+        color: var(--text-sub-blue);
+    }
 }
 
 wt-dialog.wt-upload-dialog> {
