--- a/src/App.css
+++ b/src/App.css
@@ -114,7 +114,8 @@ wt-iron-overlay-backdrop {
   width: 100%;
   height: 100%;
   background: #000;
-  opacity: 0.2;
+  opacity: 0;
+  transition: opacity 0.2s;
   z-index: 2002;
 }
 
@@ -191,3 +192,7 @@ wt-dialog {
   font-weight: 400;
   line-height: 20px;
 }
+
+/* [hidden]{
+  display: none !important;
+} */
