[Feat]: UploadSetting 코드 수정중
 - UploadSetting2.jsx: upload setting 코드 재구성중
 - UploadSetting2.scss: upload setting css 코드 재구성중
 - App.js: upload setting2 test routing 구성
 - common.scss: root css 추가

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -64,6 +64,7 @@
     --wt-theme-green: #2ba640;
     --wt-theme-red: #ff4e45;
     --wt-theme-blue-bg: #3ea6ff;
+    --wt-brand-background-solid: #282828;
 
     --wt-container-border: 1px solid var(--container-border);
 
