[Feat]: Upload 컴포넌트 연결 및 분리
 - Upload 전체 파일 컴포넌트 분리 및 step 연결

--- a/src/components/Upload/Upload.scss
+++ b/src/components/Upload/Upload.scss
@@ -125,3 +125,7 @@ wt-dialog.wt-upload-dialog> {
         padding: 0;
     }
 }
+
+wt-upload-dialog[workflow-step=SELECT_FILES] #scrollable-content.wt-upload-dialog, wt-upload-dialog[workflow-step=SELECT_FILES] .button-area.wt-upload-dialog {
+    display: none;
+}
