Style: layout box-sizing 수정

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -70,6 +70,7 @@ wt-icon-button#search-icon {
     border: 1px solid var(--searchbar-border-color);
     border-radius: 0 40px 40px 0;
     background: var(--searchbar-button-color);
+    padding: 0;
 }
 
 .wt-head {
