Refactor: studio sidebar refactoring

--- a/src/components/Sidebar/StudioSidebar.scss
+++ b/src/components/Sidebar/StudioSidebar.scss
@@ -1,97 +1,9 @@
 @import '../../styles/common.scss';
 
-.studio_sidebar {
-    background-color: var(--studio-bg);
-    width: 256px;
-    margin-top: 64px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    position: fixed;
-    border-right: 1px solid var(--white-alpha-10);
-}
-
-.studio_sidebar_profile {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-top: 24px;
-
-    img {
-        width: 112px;
-        height: 112px;
-        border-radius: 50%;
-    }
-}
-
-.studio_sidebar_profile_content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 16px;
-
-    h3 {
-        font-weight: 600;
-        font-size: 15px;
-        line-height: 24px;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        color: var(--text-primary);
-        padding-top: 14px;
-    }
-
-    p {
-        font-weight: 400;
-        letter-spacing: 0.011em;
-        font-size: 12px;
-        line-height: 16px;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        color: var(--text-secondary);
-        padding-top: 2px;
-    }
-}
-
-.studio_sidebar_list {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    padding: 0 20px 0 16px;
-    cursor: pointer;
-    list-style: none;
-
-    &_item {
-        &_box {
-            font-weight: 600;
-            font-size: 15px;
-            line-height: 24px;
-            min-height: 48px;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            color: var(--text-secondary);
-        }
-
-        &_icon {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            width: 24px;
-            margin-left: 8px;
-            margin-right: 24px;
-        }
-    }
-}
-
-
-
 wt-side-st.wt-page {
     flex: none;
     background-color: var(--wt-brand-background-solid);
+    padding-top: 68px;
 }
 
 wt-side-st {
@@ -270,6 +182,12 @@ wt-side-st #entity-label-container.wt-side-st {
     width: calc(var(--navigation-drawer-expanded-width) - 1px);
 }
 
+li.wt-side-st {
+    &:hover {
+        background: var(--wt-general-background-a);
+    }
+}
+
 .menu-item-link.wt-side-st {
     display: block;
     outline: none;
@@ -334,17 +252,17 @@ wt-icon-item.wt-side-st wt-iron-icon.wt-side-st {
     color: var(--wt-icon-inactive);
 }
 
-.nav-item-text.wt-side-st{
+.nav-item-text.wt-side-st {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
-wt-icon-item.iron-selected.wt-side-st::after{
+wt-icon-item.iron-selected.wt-side-st::after {
     opacity: 1;
 }
 
-wt-icon-item.wt-side-st::after{
+wt-icon-item.wt-side-st::after {
     position: absolute;
     content: "";
     left: 0;
